# SuperKit_Rust_code_for_RaspberryPi

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/01_LED/: led.rs
src/02_BtnAndLed/: BtnAndLed.rs
src/03_8Led/: 8Led.rs
src/04_PwmLed/: pwmLed.rs
src/05_RGB/: rgb.rs
src/06_Beep/: beep.rs
src/08_RotaryEncoder/: rotaryEncoder.rs
src/10_74HC595_LED/: hc595.rs
src/11_Segment/: dice.rs  segment.rs
src/12_DotMatrix/: doxMatrix.rs
