[package]
name = "SuperKit_Rust_code_for_RaspberryPi"
version = "0.0.3"
authors = ["Michael Cummings <dragonrun1@gmail.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "os", "os::linux-apis"]
keywords = ["raspberry", "pi", "embedded-hal", "embedded-hardware", "learning-rust"]

[[bin]]
name = "led"
path = "src/01_LED/led.rs"

[[bin]]
name = "btn_and_led"
path = "src/02_BtnAndLed/btnAndLed.rs"

[[bin]]
name = "8led"
path = "src/03_8Led/8Led.rs"

[[bin]]
name = "pwm_led"
path = "src/04_PwmLed/pwmLed.rs"

[[bin]]
name = "rgb"
path = "src/05_RGB/rgb.rs"

[[bin]]
name = "beep"
path = "src/06_Beep/beep.rs"

[[bin]]
name = "motor"
path = "src/07_Motor/motor.rs"

[dependencies]
anyhow = "1.0.32"
ctrlc = { version = "3.1.6", features = ["termination"] }
embedded-hal = { version = "0.2.4", features = ["unproven"] }
rppal = { version = "0.11.3", features = ["hal", "hal-unproven"] }
